// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VlanField> <VlanField> - adds vlans taken in same list as used vlans 1`] = `
LoadedCheerio {
  "0": <div
    class="euiFlexItem css-ys1ii3-EuiFlexItem"
  >
    <section
      class="list-field"
      id="uniforms-000j-0000"
      required=""
    >
      <div
        class="euiFormRow euiFormRow--fullWidth"
        id="formrow-x-row"
      >
        <div
          class="euiFormRow__labelWrapper"
        >
          <label
            class="euiFormLabel euiFormRow__label"
            for="formrow-x"
            id="formrow-x-label"
          />
           
          <div
            class="euiText euiText--medium"
          />
        </div>
        <div
          class="euiFormRow__fieldWrapper"
        />
      </div>
      <ul>
        <div
          id="uniforms-000j-0002"
        >
          <section
            required=""
          >
            <div
              class="euiFormRow euiFormRow--fullWidth"
              id="uniforms-000j-0003-row"
            >
              <div
                class="euiFormRow__labelWrapper"
              >
                <label
                  class="euiFormLabel euiFormRow__label"
                  for="uniforms-000j-0003"
                  id="uniforms-000j-0003-label"
                />
                 
                <div
                  class="euiText euiText--medium"
                />
              </div>
              <div
                class="euiFormRow__fieldWrapper"
              >
                <div
                  class="euiFormControlLayout euiFormControlLayout--fullWidth"
                >
                  <div
                    class="euiFormControlLayout__childrenWrapper"
                  >
                    <input
                      aria-describedby="uniforms-000j-0003-help-0"
                      class="euiFieldText euiFieldText--fullWidth"
                      id="uniforms-000j-0003"
                      name="x.0.y"
                      placeholder="Enter a valid VLAN range..."
                      type="text"
                      value="2,3"
                    />
                  </div>
                </div>
                <div
                  class="euiFormHelpText euiFormRow__text"
                  id="uniforms-000j-0003-help-0"
                >
                  Already used VLAN ranges for this service port: 3
                </div>
              </div>
            </div>
          </section>
        </div>
        <div
          id="uniforms-000j-0004"
        >
          <section
            required=""
          >
            <div
              class="euiFormRow euiFormRow--fullWidth"
              id="uniforms-000j-0005-row"
            >
              <div
                class="euiFormRow__labelWrapper"
              >
                <label
                  class="euiFormLabel euiFormRow__label"
                  for="uniforms-000j-0005"
                  id="uniforms-000j-0005-label"
                />
                 
                <div
                  class="euiText euiText--medium"
                />
              </div>
              <div
                class="euiFormRow__fieldWrapper"
              >
                <div
                  class="euiFormControlLayout euiFormControlLayout--fullWidth"
                >
                  <div
                    class="euiFormControlLayout__childrenWrapper"
                  >
                    <input
                      aria-describedby="uniforms-000j-0005-help-0"
                      class="euiFieldText euiFieldText--fullWidth"
                      id="uniforms-000j-0005"
                      name="x.1.y"
                      placeholder="Enter a valid VLAN range..."
                      type="text"
                      value="3"
                    />
                  </div>
                </div>
                <div
                  class="euiFormHelpText euiFormRow__text"
                  id="uniforms-000j-0005-help-0"
                >
                  Already used VLAN ranges for this service port: 2-3
                </div>
              </div>
            </div>
          </section>
        </div>
        <div
          id="uniforms-000j-0006"
        >
          <section
            required=""
          >
            <div
              class="euiFormRow euiFormRow--fullWidth"
              id="uniforms-000j-0007-row"
            >
              <div
                class="euiFormRow__labelWrapper"
              >
                <label
                  class="euiFormLabel euiFormRow__label"
                  for="uniforms-000j-0007"
                  id="uniforms-000j-0007-label"
                />
                 
                <div
                  class="euiText euiText--medium"
                />
              </div>
              <div
                class="euiFormRow__fieldWrapper"
              >
                <div
                  class="euiFormControlLayout euiFormControlLayout--fullWidth"
                >
                  <div
                    class="euiFormControlLayout__childrenWrapper"
                  >
                    <input
                      aria-describedby="uniforms-000j-0007-help-0"
                      class="euiFieldText euiFieldText--fullWidth"
                      id="uniforms-000j-0007"
                      name="x.2.y"
                      placeholder="Enter a valid VLAN range..."
                      type="text"
                      value="3"
                    />
                  </div>
                </div>
                <div
                  class="euiFormHelpText euiFormRow__text"
                  id="uniforms-000j-0007-help-0"
                >
                  This service port has no VLANs in use (yet).
                </div>
              </div>
            </div>
          </section>
        </div>
        <div
          class="add-item"
          id="uniforms-000j-0008"
          role="button"
          tabindex="0"
        >
          <i
            class="fa fa-plus "
          />
          <label />
        </div>
      </ul>
    </section>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`<VlanField> <VlanField> - renders an input that is correctly enabled/disabled based on portMode (tagged with used Vlans) 1`] = `
LoadedCheerio {
  "0": <section
    required=""
  >
    <div
      class="euiFormRow euiFormRow--fullWidth"
      id="uniforms-000i-0000-row"
    >
      <div
        class="euiFormRow__labelWrapper"
      >
        <label
          class="euiFormLabel euiFormRow__label"
          for="uniforms-000i-0000"
          id="uniforms-000i-0000-label"
        />
         
        <div
          class="euiText euiText--medium"
        />
      </div>
      <div
        class="euiFormRow__fieldWrapper"
      >
        <div
          class="euiFormControlLayout euiFormControlLayout--fullWidth"
        >
          <div
            class="euiFormControlLayout__childrenWrapper"
          >
            <input
              aria-describedby="uniforms-000i-0000-help-0"
              class="euiFieldText euiFieldText--fullWidth"
              id="uniforms-000i-0000"
              name="x"
              placeholder="Enter a valid VLAN range..."
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="euiFormHelpText euiFormRow__text"
          id="uniforms-000i-0000-help-0"
        >
          Already used VLAN ranges for this service port: 3-6,10
        </div>
      </div>
    </div>
  </section>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`<VlanField> <VlanField> - renders an input that is correctly enabled/disabled based on portMode (tagged) 1`] = `
LoadedCheerio {
  "0": <section
    required=""
  >
    <div
      class="euiFormRow euiFormRow--fullWidth"
      id="uniforms-000h-0000-row"
    >
      <div
        class="euiFormRow__labelWrapper"
      >
        <label
          class="euiFormLabel euiFormRow__label"
          for="uniforms-000h-0000"
          id="uniforms-000h-0000-label"
        />
         
        <div
          class="euiText euiText--medium"
        />
      </div>
      <div
        class="euiFormRow__fieldWrapper"
      >
        <div
          class="euiFormControlLayout euiFormControlLayout--fullWidth"
        >
          <div
            class="euiFormControlLayout__childrenWrapper"
          >
            <input
              aria-describedby="uniforms-000h-0000-help-0"
              class="euiFieldText euiFieldText--fullWidth"
              id="uniforms-000h-0000"
              name="x"
              placeholder="Enter a valid VLAN range..."
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="euiFormHelpText euiFormRow__text"
          id="uniforms-000h-0000-help-0"
        >
          This service port has no VLANs in use (yet).
        </div>
      </div>
    </div>
  </section>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`<VlanField> <VlanField> - renders an input that is correctly enabled/disabled based on portMode (untagged with used vlans) 1`] = `
LoadedCheerio {
  "0": <section
    required=""
  >
    <div
      class="euiFormRow euiFormRow--fullWidth"
      id="uniforms-000g-0000-row"
    >
      <div
        class="euiFormRow__labelWrapper"
      >
        <label
          class="euiFormLabel euiFormRow__label"
          for="uniforms-000g-0000"
          id="uniforms-000g-0000-label"
        />
         
        <div
          class="euiText euiText--medium"
        />
      </div>
      <div
        class="euiFormRow__fieldWrapper"
      >
        <div
          class="euiFormControlLayout euiFormControlLayout--fullWidth"
        >
          <div
            class="euiFormControlLayout__childrenWrapper"
          >
            <input
              aria-describedby="uniforms-000g-0000-help-0"
              class="euiFieldText euiFieldText--fullWidth"
              disabled=""
              id="uniforms-000g-0000"
              name="x"
              placeholder="Enter a valid VLAN range..."
              type="text"
              value="0"
            />
          </div>
        </div>
        <div
          class="euiFormHelpText euiFormRow__text"
          id="uniforms-000g-0000-help-0"
        >
          VLAN is only relevant for SN7 MSP or SN8 SP in tagged mode, not for link_member or untagged ports.
        </div>
      </div>
    </div>
  </section>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`<VlanField> <VlanField> - renders an input that is correctly enabled/disabled based on portMode (untagged) 1`] = `
LoadedCheerio {
  "0": <section
    required=""
  >
    <div
      class="euiFormRow euiFormRow--fullWidth"
      id="uniforms-000f-0000-row"
    >
      <div
        class="euiFormRow__labelWrapper"
      >
        <label
          class="euiFormLabel euiFormRow__label"
          for="uniforms-000f-0000"
          id="uniforms-000f-0000-label"
        />
         
        <div
          class="euiText euiText--medium"
        />
      </div>
      <div
        class="euiFormRow__fieldWrapper"
      >
        <div
          class="euiFormControlLayout euiFormControlLayout--fullWidth"
        >
          <div
            class="euiFormControlLayout__childrenWrapper"
          >
            <input
              aria-describedby="uniforms-000f-0000-help-0"
              class="euiFieldText euiFieldText--fullWidth"
              disabled=""
              id="uniforms-000f-0000"
              name="x"
              placeholder="Enter a valid VLAN range..."
              type="text"
              value="0"
            />
          </div>
        </div>
        <div
          class="euiFormHelpText euiFormRow__text"
          id="uniforms-000f-0000-help-0"
        >
          VLAN is only relevant for SN7 MSP or SN8 SP in tagged mode, not for link_member or untagged ports.
        </div>
      </div>
    </div>
  </section>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;
